# swim-gen

./: .editorconfig  .gitattributes  .gitignore  .releaserc  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  Taskfile.sh  big_activity.csv  big_activity.fit  docker-compose.yml  go.mod  go.sum  pr-body.md  swim-rag.go
.github/: FUNDING.yml
.github/scripts/: validate-youtube-links.js
.sisyphus/: boulder.json
backend/: .gitignore  Dockerfile  README.md  Taskfile.sh  cloudbuild.yaml  go.mod  go.sum  main-pr.cloudbuild.yaml  main.go  release.cloudbuild.yaml
bff/: .env.development  .env.test  .gitignore  Dockerfile  README.md  eslint.config.ts  main-pr.cloudbuild.yaml  package-lock.json  package.json  release.cloudbuild.yaml  vitest.config.ts  vitest.setup.ts
data/: de.json  en.json
deployments/: .gitignore  README.md
frontend/: .editorconfig  .env.production  .gitignore  Dockerfile  README.md  index.html  main-pr.cloudbuild.yaml  nginx.conf  package-lock.json  package.json  release.cloudbuild.yaml  tsconfig.app.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
mcp-server/: .gitignore  Dockerfile  LICENSE  README.md  Taskfile.sh  main-pr.cloudbuild.yaml  pyproject.toml  release.cloudbuild.yaml
mcp-server/src/: client.py
mcp-server/src/swim_gen_mcp/: auth.py  main.py  schemas.py
mcp-server/src/swim_rag_mcp/: auth.py  main.py  schemas.py  utils.py
mcp-server/tests/unit_tests/: test_auth.py
rag/: example.go  json.go  prompts.go  psql.go  rag-server.go  rag.go  scraper.go  scraper_test.go  types.go
scraper/: scraper.go
(+364 files in other folders)
